Further edits to 2.5 controller docs

--- a/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
@@ -2,7 +2,7 @@
 
 = Jobs in {ControllerName}
 
-A job is an instance of {ControllerName} launching an Ansible playbook against an inventory of hosts.
+A job is an instance of {ControllerName} launching an Ansible Playbook against an inventory of hosts.
 
 The *Jobs* list view displays a list of jobs and their statuses, shown as completed successfully, failed, or as an active (running) job. 
 The default view is collapsed (Compact) with the job name, status, job type, start, and finish times. 
