--- a/downstream/modules/platform/con-controller-benefits-fact-caching.adoc
+++ b/downstream/modules/platform/con-controller-benefits-fact-caching.adoc
@@ -14,9 +14,9 @@ Custom fact caching could conflict with the controller's fact caching feature.
 You must use the fact caching module that includes {ControllerName}.
 ====
 
-You can select to use cached facts in your job by checking the *Enable Fact Storage* option when you create or edit a job template.
+You can select to use cached facts in your job by checking the *Enable fact storage* option when you create or edit a job template.
 
-image::ug-job-templates-options-use-factcache.png[Cached facts]
+//image::ug-job-templates-options-use-factcache.png[Cached facts]
 
 To clear facts, run the Ansible `clear_facts` link:https://docs.ansible.com/ansible/latest/collections/ansible/builtin/meta_module.html#examples[meta task].
 The following is an example playbook that uses the Ansible `clear_facts` meta task.
