--- a/downstream/modules/platform/con-controller-capacity-determination.adoc
+++ b/downstream/modules/platform/con-controller-capacity-determination.adoc
@@ -2,7 +2,7 @@
 
 = {ControllerNameStart} capacity determination and job impact
 
-The {ControllerNameStart} capacity system determines how many jobs can run on an instance given the amount of resources available to the instance and the size of the jobs that are running (referred to as Impact). 
+The {ControllerName} capacity system determines how many jobs can run on an instance given the amount of resources available to the instance and the size of the jobs that are running (referred to as Impact). 
 The algorithm used to determine this is based on the following two things:
 
 * How much memory is available to the system (`mem_capacity`)
@@ -22,5 +22,5 @@ This guarantees that jobs do not get stuck as a result of an under-provisioned s
 
 .Additional resources
 
-* For information on container groups, see link:{BaseURL}red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-container-capacity[Container capacity limits] in _{ControllerAG}_.
-* For information on sliced jobs and their impact to capacity, see xref:controller-job-slice-execution-behavior[Job slice execution behavior].
+* For information about container groups, see link:{BaseURL}red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-container-capacity[Container capacity limits] in _{ControllerAG}_.
+* For information about sliced jobs and their impact to capacity, see xref:controller-job-slice-execution-behavior[Job slice execution behavior].
