--- a/downstream/modules/platform/con-controller-inventory-sync-jobs.adoc
+++ b/downstream/modules/platform/con-controller-inventory-sync-jobs.adoc
@@ -4,7 +4,7 @@
 
 When an inventory synchronization is executed, the results display in the *Output* tab. 
 
-For more information on inventory synchronization, see xref:ref-controller-constructed-inventories[Constructed inventories].
+For more information about inventory synchronization, see xref:ref-controller-constructed-inventories[Constructed inventories].
 
 If used, the Ansible CLI displays the same information. 
 This can be useful for debugging.
