--- a/downstream/modules/platform/con-controller-playbook-run-jobs.adoc
+++ b/downstream/modules/platform/con-controller-playbook-run-jobs.adoc
@@ -16,9 +16,9 @@ The events summary displays the following events that are run as part of this pl
 
 image::ug-jobs-events-summary.png[Job events summary]
 
-Use the icons next to the events to relaunch (image:rightrocket.png[Rightrocket,15,15]), download (image:download.png[Download,15,15]) the job output, or delete (image:delete-button.png[Delete,15,15]) the job.
+You can btn:[Relaunch job], btn:[Cancel job], download image:download.png[Download,15,15] the job output, or delete image:delete-button.png[Delete,15,15] the job.
 
 Hover over a section of the host status bar in the *Output* view and the number of hosts associated with that status displays.
 
 The output for a playbook job is also available after launching a job from the *Jobs* tab of its *Jobs Templates* page.
-View its host details by clicking on the line item tasks in the output.
+View its host details by clicking the line item tasks in the output.
