--- a/downstream/modules/platform/proc-controller-select-capacity.adoc
+++ b/downstream/modules/platform/proc-controller-select-capacity.adoc
@@ -21,8 +21,9 @@ A value of 0.5 is a 50/50 balance between the two algorithms, which is 18:
 
 View or edit the capacity:
 
-. From the *Instances Groups* list view, select the desired instance.
-. Select the *Instances* tab and adjust the *Capacity Adjustment* slider.
+. From the navigation panel, select {MenuInfrastructureInstanceGroups}.
+. On the *Instance Groups* list view, select the required instance.
+. Select the *Instances* tab and adjust the *Capacity adjustment* slider.
 +
 [NOTE]
 ====
