--- a/downstream/modules/platform/con-controller-work-with-notifications.adoc
+++ b/downstream/modules/platform/con-controller-work-with-notifications.adoc
@@ -3,12 +3,12 @@
 = Work with notifications
 
 From the navigation panel, select {MenuAEAdminJobNotifications}. 
-This enables you to review any notification integrations you have set up and their statuses, if they have run.
+You can review any notification integrations you have set up and their statuses, if they have run.
 
-image::ug-job-template-completed-notifications-view.png[Job template completed notifications]
+//image::ug-job-template-completed-notifications-view.png[Job template completed notifications]
 
 Use the toggles to enable or disable the notifications to use with your particular template.
-For more information, see xref:controller-enable-disable-notifications[Enable and Disable Notifications].
+For more information, see xref:controller-enable-disable-notifications[Enable and disable notifications].
 
 If no notifications have been set up, click btn:[Add notifier] to create a new notification.
-For more information about configuring various notification types and extended messaging, see xref:controller-notification-types[Notification Types].
+For more information about configuring various notification types and extended messaging, see xref:controller-notification-types[Notification types].
