--- a/downstream/modules/platform/proc-controller-copy-a-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-copy-a-job-template.adoc
@@ -4,7 +4,7 @@
 
 If you copy a job template, it does not copy any associated schedule, notifications, or permissions.
 Schedules and notifications must be recreated by the user or administrator creating the copy of the job template.
-The user copying the Job Template is be granted administrator permission, but no permissions are assigned (copied) to the job template.
+The user copying the Job Template is granted administrator permission, but no permissions are assigned (copied) to the job template.
 
 .Procedure
 
@@ -12,5 +12,5 @@ The user copying the Job Template is be granted administrator permission, but no
 . Click image:options_menu.png[options menu,15,15] and the copy image:copy.png[Copy,15,15] icon associated with the template that you want to copy.
 * The new template with the name of the template from which you copied and a timestamp displays in the list of templates.
 . Click to open the new template and click btn:[Edit template].
-. Replace the contents of the *Name* field with a new name, and provide or modify the entries in the other fields to complete this page.
+. Replace the contents of the *Name* field with a new name, and give or change the entries in the other fields to complete this page.
 . Click btn:[Save job template].
