21776 - changed single-node to standalone Redis and other fixes

--- a/downstream/modules/platform/con-gw-centralized-redis.adoc
+++ b/downstream/modules/platform/con-gw-centralized-redis.adoc
@@ -4,4 +4,4 @@
 
 = Centralized Redis
 
-{PlatformNameShort} offers a centralized Redis instance in both xref:gw-single-node-redis[single-node] and xref:gw-clustered-redis[clustered] topologies. This enables resiliency by providing consistent performance and reliability. 
+{PlatformNameShort} offers a centralized Redis instance in both xref:gw-single-node-redis_planning[standalone] and xref:gw-clustered-redis_planning[clustered] topologies. This enables resiliency by providing consistent performance and reliability. 
