--- a/downstream/modules/platform/con-gw-clustered-redis.adoc
+++ b/downstream/modules/platform/con-gw-clustered-redis.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: CONCEPT
 
-[id="gw-single-node-redis_{context}"]
+[id="gw-clustered-redis_{context}"]
 
 = Clustered Redis
 
@@ -17,7 +17,7 @@ If a primary instance becomes unavailable due to failures, the other primary nod
 
 image::gw-clustered-redis.png[Single-node Redis deployment]
 
-The benefits of deploying clustered Redis over single-node Redis include the following:
+The benefits of deploying clustered Redis over standalone Redis include the following:
 
 * Data is automatically split across multiple nodes.
 * Data can be dynamically adjusted.
