--- a/downstream/modules/platform/ref-example-CONT-architecture.adoc
+++ b/downstream/modules/platform/ref-example-CONT-architecture.adoc
@@ -1,5 +1,5 @@
 // This module is included in assembly-aap-architecture.adoc
-[id='example_CONT_architecture_{reference}']
+[id='example_CONT_architecture_{context}']
 = Example containerized deployment architecture
 
 The following reference architecture provides an example setup of an enterprise deployment of containerized {PlatformNameShort}.
