--- a/downstream/modules/platform/ref-example-OCP-architecture.adoc
+++ b/downstream/modules/platform/ref-example-OCP-architecture.adoc
@@ -1,5 +1,5 @@
 // This module is included in assembly-aap-architecture.adoc
-[id='example_OCP_architecture_{reference}']
+[id='example_OCP_architecture_{context}']
 = Example Operator-based deployment architecture
 
 The following reference architecture provides an example setup of an enterprise deployment of {PlatformNameShort} on {OCPShort}.
