--- a/downstream/modules/platform/con-gw-single-node-redis.adoc
+++ b/downstream/modules/platform/con-gw-single-node-redis.adoc
@@ -2,10 +2,12 @@
 
 [id="gw-single-node-redis_{context}"]
 
-= Single-node Redis
+//[ddacosta] - changed from single-node to standalone to align with "in" product terminology
 
-Single-node Redis consists of a simple architecture that is easy to deploy and configure.
+= Standalone Redis
 
-image::gw-single-node-redis.png[Single-node Redis deployment]
+Standalone Redis consists of a simple architecture that is easy to deploy and configure.
 
-If a resilient solution is not a requirement, deploy {PlatformNameShort} with a single-node Redis.
+image::gw-single-node-redis.png[Standalone Redis deployment]
+
+If a resilient solution is not a requirement, deploy {PlatformNameShort} with a standalone Redis.
