--- a/downstream/titles/aap-planning-guide/master.adoc
+++ b/downstream/titles/aap-planning-guide/master.adoc
@@ -25,4 +25,4 @@ include::platform/assembly-network-ports-protocols.adoc[leveloffset=+1]
 include::platform/assembly-choosing-obtaining-installer.adoc[leveloffset=+1]
 include::platform/assembly-inventory-introduction.adoc[leveloffset=+1]
 // emurtough removed to avoid duplication with topologies docs include::platform/assembly-supported-installation-scenarios.adoc[leveloffset=+1]
-include::../topologies/topologies/assembly-overview-tested-deployment-models.adoc[leveloffset=+1]
+include::topologies/assembly-overview-tested-deployment-models.adoc[leveloffset=+1]
