--- a/downstream/modules/devtools/proc-devtools-install-container.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-container.adoc
@@ -2,14 +2,13 @@
 
 = Installing {ToolsName} on a container inside {VSCode}
 
-
 The Dev Containers {VSCode} extension requires a config file to store settings for your dev containers. 
 After you have created a config file for your dev container, reopen your directory in a container in {VSCode}.
 
 .Prerequisites
 
 . You have installed a containerization platform, for example Podman, Podman Desktop, Docker, or Docker Desktop.
-. You have a Red Hat login and you can log in to the Red Hat registry at registry.redhat.io.
+. You have a Red Hat login and you have logged in to the Red Hat registry at `registry.redhat.io`.
 For information about logging in to `registry.redhat.io`, see
 xref:devtools-setup-registry-redhat-io_installing-devtools[Authenticating with the Red Hat container registry].
 . You have installed {VSCode}.
