--- a/downstream/modules/playbooks/ref-rpm-installation-a1-general-variables.adoc
+++ b/downstream/modules/playbooks/ref-rpm-installation-a1-general-variables.adoc
@@ -4,7 +4,7 @@
 
 [cols="Variable, Description"]  
 |=== 
-|'enable_insights_collection', The default install registers the node to the Red Hat Insights for Red Hat Ansible Automation Platform Service if the node is registered with Subscription Manager. Set to `False` to disable.
+|`enable_insights_collection`, The default install registers the node to the Red Hat Insights for Red Hat Ansible Automation Platform Service if the node is registered with Subscription Manager. Set to `False` to disable.
 
 Default = `true`
 |`nginx_user_http_config`, List of nginx configurations for `/etc/nginx/nginx.conf` under the http section.
@@ -20,19 +20,19 @@ Enter your Red Hat Registry Service Account credentials in `registry_username` a
 
 When `registry_url` is `registry.redhat.io`, username and password are required if not using a bundle installer.
 
-For more information, see URL[Setting registry_username and registry_password].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/getting_started_with_automation_hub/index#setting_registry_username_and_registry_password.
 |`registry_url`, Default = `registry.redhat.io.`
 |`registry_username`, registry_username is only required if a non-bundle installer is used.
 User credential for access to `registry_url`.
 
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 
-For more information, see URL[Setting registry_username and registry_password]
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/getting_started_with_automation_hub/index#setting_registry_username_and_registry_password.
 |`routable_hostname`, `routable hostname` is used if the machine running the installer can only route to the target host through a specific URL, for example, if you use shortnames in your inventory, but the node running the installer can only resolve that host using FQDN.
 
 If `routable_hostname` is not set, it should default to `ansible_host`. If you do not set `ansible_host`, `inventory_hostname` is used as a last resort.
 
-This variable is used as a host variable for particular hosts and not under the `[all:vars]` section. For further information, For more information, see URL [Assigning a variable to one machine:host variables].
+This variable is used as a host variable for particular hosts and not under the `[all:vars]` section. For further information, For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/getting_started_with_automation_hub/index#assigning_a_variable_to_one_machine.
 |`nginx_tls_protocol`, Defines support for `ssl_protocols` in Nginx.
 
 Default = `TLSv1.2`.
@@ -40,13 +40,13 @@ Default = `TLSv1.2`.
 
 Values available `TLSv1`, `TLSv1.1`, `TLSv1.2`, `TLSv1.3`.
 
-The TLSv1.1 and TLSv1.2 parameters only work when OpenSSL 1.0.1 or higher is used.
+The `TLSv1.1` and `TLSv1.2` parameters only work when OpenSSL 1.0.1 or higher is used.
 
-The TLSv1.3 parameter only works when OpenSSL 1.1.1 or higher is used.
+The `TLSv1.3` parameter only works when OpenSSL 1.1.1 or higher is used.
 
-If `nginx_tls-protocols` = [`'TLSv1.3'`] only TLSv1.3 is enabled.
+If `nginx_tls-protocols` = [`TLSv1.3`] only `TLSv1.3` is enabled.
 
-If nginx_tls-protocols = ['TLSv1.3'] only TLSv1.3 is enabled. To set more than one protocol use `nginx_tls_protocols` = [`'TLSv1.2'`, `'TLSv.1.3'`]
+If nginx_tls-protocols = [`TLSv1.3`] only `TLSv1.3` is enabled. To set more than one protocol use `nginx_tls_protocols` = [`TLSv1.2`, `TLSv.1.3`]
 
 Default = `TLSv1.2`.
 |===
