AAP-31577 Add attribute for unified platform dashboard

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -17,6 +17,7 @@
 :VMBase: VM-based installation
 :OperatorBase: operator-based installation
 :ContainerBase: container-based installation
+:PlatformDashboard: platform dashboard
 
 // Event-Driven Ansible
 :EDAName: Event-Driven Ansible
