cae-fix - Correcting broken xrefs due to information moving to a new document

--- a/downstream/modules/platform/ref-controller-config-json.adoc
+++ b/downstream/modules/platform/ref-controller-config-json.adoc
@@ -47,7 +47,7 @@ Which includes the following fields:
 
 * *ansible_version*: The system Ansible version on the host
 * *authentication_backends*: The user authentication backends that are available. 
-For more information, see xref:assembly-controller-set-up-social-authentication[Setting up social authentication] or  xref:controller-LDAP-authentication[Setting up LDAP authentication].
+For more information, see link:{URLCentralAuth}/index#gw-config-authentication-type[Configuring an authentication type].
 * *external_logger_enabled*: Whether external logging is enabled
 * *external_logger_type*: What logging backend is in use if enabled. 
 For more information, see xref:assembly-controller-logging-aggregation[Logging and aggregation].
