adds new procedure plus edits

--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -26,8 +26,10 @@ For further information, see xref:assembly-validated-content[{Valid}].
 
 You can update these collections manually by downloading their packages.
 
-//// 
+//hherbly: removing as this is specific to partners, not a general user audience 
+
 [discrete]
+////
 == Why certify Ansible collections?
 
 The Ansible certification program represents a shared statement of support for {CertifiedCon} between Red Hat and the ecosystem partner.
@@ -38,7 +40,7 @@ Red Hat offers go-to-market benefits for Certified Partners to grow market aware
 Red Hat {CertifiedName} are distributed through {HubNameMain} (subscription required), a centralized repository for jointly supported Ansible Content.
 As a certified partner, publishing collections to {HubNameMain} gives end customers the power to manage how trusted automation content is used in their production environment with a well-known support life cycle.
 
-For more information about getting started with certifying a solution, see link:https://connect.redhat.com/en/partner-with-us/red-hat-ansible-automation-certification[Red Hat Partner Connect].
+For more information about getting started with certifying a solution, see link:https://connect.redhat.com/en/partner-with-us/red-hat-ansible-automation-certification[Red Hat Partner Resources].
 
 [discrete]
 == How do I get a collection certified?
@@ -58,11 +60,18 @@ If there is a problem with the certified collection, support teams transfer the 
 You can create and certify collections that contain only roles.
 Current testing requirements are focused on collections containing modules, and additional resources are currently in progress for testing collections containing only roles.
 Contact ansiblepartners@redhat.com for more information.
-
 ////
 
-include::assembly-synclists.adoc[leveloffset=+1]
+You can use {HubNameMain} to distribute the relevant {CertifiedColl}s to your users by creating a requirements file or a synclist. We recommend using a requirements file to install collections to your {HubName}, as synclists can only be managed by users with platform administrator privileges. 
+
+Before you can use a requirements file to install content, you must: 
+
+. xref:tbd[Configure a remote repository in your local hub]
+. xref:tbd [Obtain an automation hub API token]
+. xref:tbd [Use the hub API token to configure automation hub as a content source]
+
 include::assembly-syncing-to-cloud-repo.adoc[leveloffset=+1]
+include::assembly-synclists.adoc[leveloffset=+1]
 include::assembly-collections-and-content-signing-in-pah.adoc[leveloffset=+1]
 //include::assembly-faq.adoc[leveloffset=+1]
 include::assembly-validated-content.adoc[leveloffset=+1]
