--- a/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
+++ b/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
@@ -5,11 +5,9 @@ Use remote configurations to configure your {PrivateHubName} to synchronize with
 
 [IMPORTANT]
 ====
+To synchronize content, you can now upload a manually-created requirements file from the rh-certified remote. Remotes are configurations that allow you to synchronize content to your custom repositories from an external collection source.
+
 As of the 2.4 release you can still synchronize content, but synclists are deprecated, and will be removed in a future version.
-
-To synchronize content, you can now upload a manually-created requirements file from the rh-certified remote. 
-
-Remotes are configurations that allow you to synchronize content to your custom repositories from an external collection source.
 ====
 
 [discrete]
@@ -42,6 +40,8 @@ This means collections should have short, all lowercase names.
 You can use underscores in the collection name if it improves readability.
 
 include::hub/con-remote-repos.adoc[leveloffset=+1]
+
+include::hub/proc-create-requirements-file.adoc[leveloffset=+1]
 
 include::hub/proc-obtaining-org-collection-url.adoc[leveloffset=+1]
 
