AAP-29296-A updated links

--- a/downstream/modules/platform/ref-OCP-system-requirements.adoc
+++ b/downstream/modules/platform/ref-OCP-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for installing {PlatformName} on OpenShift Container Platform
 
-When installing {PlatformNameShort} on OpenShift Container Platform, use the system requirements identified in the xref:[Tested system configurations] section of the _Operator enterprise topology_ guide.
+When installing {PlatformNameShort} on OpenShift Container Platform, use the system requirements identified in the link:{URL____}/index#________[Tested system configurations] section of the _Operator enterprise topology_ guide.
