--- a/downstream/modules/platform/ref-RPM-system-requirements.adoc
+++ b/downstream/modules/platform/ref-RPM-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for RPM installation
 
-When using the RPM installation method for {PlatformNameShort}, use the system requirements identified in the xref:[System requirements] section of the _RPM Installation_ guide.
+When using the RPM installation method for {PlatformNameShort}, use the system requirements identified in the link:{URL____}/index#________[System requirements] section of the _RPM Installation_ guide.
