--- a/downstream/modules/platform/ref-containerized-system-requirements.adoc
+++ b/downstream/modules/platform/ref-containerized-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for containerized installation of {PlatformNameShort}
 
-When installing the containerized version of {PlatformNameShort}, use the system requirements identified in the xref:[System requirements] section of the _Containerized installation_ guide.
+When installing the containerized version of {PlatformNameShort}, use the system requirements identified in the link:{URL____}/index#________[System requirements] section of the _Containerized installation_ guide.
