--- a/downstream/modules/platform/ref-ansible-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-ansible-inventory-variables.adoc
@@ -13,11 +13,11 @@ For a list of global configuration options, see link:https://docs.ansible.com/an
 | *Variable* | *Description*
 | *`ansible_connection`* | The connection plugin used for the task on the target host.
 
-This can be the name of any of Ansible connection plugin.
+This can be the name of any of Ansible connection plugins.
 SSH protocol types are `smart`, `ssh` or `paramiko`.
 
 Default = `smart`
-| *`ansible_host`* | The ip or name of the target host to use instead of *`inventory_hostname`*.
+| *`ansible_host`* | The IP or name of the target host to use instead of *`inventory_hostname`*.
 | *`ansible_port`* | The connection port number.
 
 Default: 22 for ssh
@@ -27,7 +27,7 @@ Default: 22 for ssh
 Never store this variable in plain text.
 
 Always use a vault.
-| *`ansible_ssh_private_key_file`* | Private key file used by SSH.
+| *`ansible_ssh_private_key_file`* | Private key file used by SSH. Useful if using multiple keys and you do not want to use an SSH agent.
 Useful if using multiple keys and you do not want to use an SSH agent.
 | *`ansible_ssh_common_args`* | This setting is always appended to the default command line for `sftp`, `scp`, and `ssh`.
 Useful to configure a ProxyCommand for a certain host or group.
@@ -41,11 +41,14 @@ If using SSH key-based authentication, the key must be managed by an SSH agent.
 
 This setting overrides the default behavior to use the system SSH.
 This can override the ssh_executable setting in `ansible.cfg`.
+| *`ansible_ssh_executable`* | Added in version 2.2.
+
+This setting overrides the default behavior to use the system SSH. This can override the ssh_executable setting in 'ansible.cfg'.
 | *`ansible_shell_type`* | The shell type of the target system.
 Do not use this setting unless you have set the `ansible_shell_executable` to a non-Bourne (sh) compatible shell.
 By default commands are formatted using sh-style syntax.
 Setting this to `csh` or `fish` causes commands executed on target systems to follow the syntax of those shells instead.
-| *`ansible_shell_executable`* | This sets the shell that the Ansible controller uses on the target machine, and overrides the executable in `ansible.cfg` which defaults to `/bin/sh`.
+| *`ansible_shell_executable`* | This sets the shell that the Ansible controller uses on the target machine and overrides the executable in `ansible.cfg` which defaults to `/bin/sh`.
 
 Do not change this variable unless `/bin/sh` is not installed on the target machine or cannot be run from sudo.
 | *`inventory_hostname`* | This variable takes the hostname of the machine from the inventory script or the Ansible configuration file.
