--- a/downstream/modules/platform/ref-controller-variables.adoc
+++ b/downstream/modules/platform/ref-controller-variables.adoc
@@ -5,19 +5,15 @@
 [cols="50%,50%",options="header"]
 |====
 | *Variable* | *Description*
-| *`admin_password`* | The admin password used to connect to the {ControllerName} instance.
+| *`admin_password`* | The password for an administration user to access the UI when the installation is complet
 
 Passwords must be enclosed in quotes when they are provided in plain text in the inventory file.
 
-| *`automation_controller_main_url`* | The full URL used by {EDAName} to connect to a controller host. This URL is required if there is no {ControllerName} configured in the inventory file.
+Use of special characters for `admin_password` is limited. The password can include any printable ASCII character except `/`, `”`, or `@`.
 
-Format example: `automation_controller_main_url='https://<hostname>'`
+|*`admin_email`* | The email address used for the admin user for automation controller.
 
-| *`admin_username`* | 
-The username used to identify and create the admin superuser in {ControllerName}.
-
-| *`admin_email`* | 
-The email address used for the admin user for {ControllerName}.
+| *`automation_controller_main_url`* | 
 
 | *`nginx_http_port`* | The nginx HTTP server listens for inbound connections.
 
@@ -25,21 +21,9 @@ Default = 80
 | *`nginx_https_port`* | The nginx HTTPS server listens for secure connections.
 
 Default = 443
-| *`nginx_hsts_max_age`* | This variable specifies how long, in seconds, the system must be considered as a _HTTP Strict Transport Security_ (HSTS) host. That is, how long HTTPS is used exclusively for communication.
+| *`nginx_hsts_max_age`* | This variable specifies how long, in seconds, the system must be considered as an _HTTP Strict Transport Security_ (HSTS) host. That is, how long HTTPS is used exclusively for communication.
 
 Default = 63072000 seconds, or two years.
-| *`nginx_tls_protocols`* | Defines support for `ssl_protocols` in Nginx.
-
-Values available `TLSv1`, `TLSv1.1, `TLSv1.2`, `TLSv1.3`
-
-The TLSv1.1 and TLSv1.2 parameters only work when OpenSSL 1.0.1 or higher is used.
-
-The TLSv1.3 parameter only works when OpenSSL 1.1.1 or higher is used.
-
-If `nginx_tls-protocols = ['TLSv1.3']` only TLSv1.3  is enabled.
-To set more than one protocol use `nginx_tls_protocols = ['TLSv1.2', 'TLSv.1.3']`
-
-Default = `TLSv1.2`.
 | *`nginx_user_headers`* | List of nginx headers for the {ControllerName} web server.
 
 Each element in the list is provided to the web server's nginx configuration as a separate line. 
@@ -72,7 +56,7 @@ A `node_type=execution` implies that the node can run jobs.
 Default for this group = `execution`.
 | *`peers`* | _Optional_
 
-The `peers` variable is used to indicate which nodes a specific host or group connects to. Wherever  this variable is defined, an outbound connection to the specific host or group is established.
+The `peers` variable is used to indicate which nodes a specific host or group connects to. Wherever this variable is defined, an outbound connection to the specific host or group is established.
 
 This variable is used to add `tcp-peer` entries in the `receptor.conf` file used for establishing network connections with other nodes.
 
@@ -91,7 +75,7 @@ Use of other special characters can cause the setup to fail.
 
 NOTE
 
-You no longer have to provide a `pg_hashed_password` in your inventory file at the time of installation because PostgreSQL 13 can now store user passwords more securely.
+You no longer have to provide a `pg_hashed_password` in your inventory file at the time of installation, because PostgreSQL 13 can now store user passwords more securely.
 
 When you supply `pg_password` in the inventory file for the installer, PostgreSQL uses the SCRAM-SHA-256 hash to secure that password as part of the installation process.
 | *`pg_port`* | The postgreSQL port to use.
@@ -117,7 +101,7 @@ Default = `awx`.
 | *`postgres_use_key`* | Location of the postgreSQL user key.
 
 `/path/to/pgsql.key`
-| *`postgres_use_ssl`* | Use this variable if postgreSQL uses SSL.
+| *`postgres_use_ssl`* | Determines if the connection between {{PlatformNameShort}} and the PostgreSQL database should use SSL. The default for this variable is false which means SSL is not used for PostgreSQL connections. When set to true, the platform connects to PostgreSQL using SSL.
 | *`postgres_max_connections`* | Maximum database connections setting to apply if you are using installer-managed postgreSQL.
 
 See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#ref-controller-database-settings[PostgreSQL database configuration] in the {ControllerName} administration guide for help selecting a value.
@@ -127,7 +111,7 @@ and 1024 for a cluster.
 | *`receptor_listener_port`* | Port to use for receptor connection.
 
 Default = 27199
-| *`supervisor_start_retry_count`* | When specified, it adds `startretries = <value specified>` to the supervisor config file (/etc/supervisord.d/tower.ini).
+| *`supervisor_start_retry_count`* | When specified, it adds `startretries = <value specified>` to the supervisor config file (/`etc/supervisord.d/tower.ini`).
 
 See link:http://supervisord.org/configuration.html#program-x-section-values[program:x Section Values] for more information about `startretries`.
 
