--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -8,6 +8,8 @@
 | *`automationedacontroller_admin_password`* | The admin password used by the {EdaController} instance.
 
 Passwords must be enclosed in quotes when they are provided in plain text in the inventory file.
+
+Use of special characters for `automationedacontroller_admin_password` is limited. The password can include any printable ASCII character except `/`, `”`, or `@`.
 | *`automationedacontroller_admin_username`* | Username used by django to identify and create the admin superuser in {EDAcontroller}.
 
 Default = `admin`
@@ -29,48 +31,44 @@ Default = `false`
 | *`automationedacontroller_gunicorn_workers`* | Number of workers for the API served through gunicorn.
 
 Default = (# of cores or threads) * 2 + 1
+| *`automationedacontroller_nginx_tls_files_remote`* | Boolean flag to specify whether cert sources are on the remote host (true) or local (false). 
+
+Default = `false`
 | *`automationedacontroller_max_running_activations`* | The number of maximum activations running concurrently per node.
 
 This is an integer that must be greater than 0.
 
 Default = 12
-| *`automationedacontroller_nginx_tls_files_remote`* | Boolean flag to specify whether cert sources are on the remote host (true) or local (false). 
-
-Default = `false`
-| *`automationedacontroller_pg_database`* | The Postgres database used by {EDAController}.
-
-Default = `automtionedacontroller`.
-| *`automationnedacontroller_pg_host`* | The hostname of the Postgres database used by {EDAController}, which can be an externally managed database.
-| *`automationedacontroller_pg_password`* | The password for the Postgres database used by {EDAController}.
-
-Use of special characters for `automationedacontroller_pg_password` is limited.
-The `!`, `#`, `0` and `@` characters are supported.
-Use of other special characters can cause the setup to fail.
-| *`automationedacontroller_pg_port`* | The port number of the Postgres database used by {EDAController}.
-
-Default = `5432`.
-| *`automationedacontroller_pg_username`* | The username for your {EDAController} Postgres database.
-
-Default = `automationedacontroller`.
-| *`automationedacontroller_rq_workers`* | Number of Redis Queue (RQ) workers used by {EDAcontroller}. RQ workers are Python processes that run in the background.
-
-Default =  (# of cores or threads) * 2 + 1
-| *`automationedacontroller_ssl_cert`* | _Optional_
-
-`/root/ssl_certs/eda._<example>_.com.crt`
-
-Same as `automationhub_ssl_cert` but for {EDAcontroller} UI and API.
-| *`automationedacontroller_ssl_key`* | _Optional_
-
-`/root/ssl_certs/eda._<example>_.com.key`
-
-Same as `automationhub_server_ssl_key` but for {EDAcontroller} UI and API.
 | *`automationedacontroller_user_headers`* | List of additional nginx headers to add to {EDAcontroller}'s nginx configuration. 
 
 Default = empty list
-//Add this variable back for the next release, as long as approved by development.
-//| *`automationedacontroller_websocket_ssl_verify`* |
-//SSL verification for the Daphne websocket used by podman to communicate from the pod to the host. Default is false to disable SSL connection as verified
+| *`automationedacontroller_gunicorn_workers`* | Number of workers for the API served through gunicorn.
 
-//Default = false
+Default = (# of cores or threads) * 2 + 1
+| *`automationedacontroller_pg_database`* | The Postgres database used by {EDAcontroller}.
+
+Default = `automtionedacontroller`.
+| *`automationnedacontroller_pg_host | The hostname of the Postgres database used by {EDAcontroller}, which can be an externally managed database.
+| *`automationedacontroller_pg_password`* | The password for the Postgres database used by {EDAcontroller}.
+
+Use of special characters for `automationedacontroller_pg_password` is limited. The `!`, `#`, `0` and `@` characters are supported. Use of other special characters can cause the setup to fail.
+| *`automationedacontroller_pg_port`* | The port number of the Postgres database used by {EDAcontroller}.
+
+Default = `5432`.
+| *`automationedacontroller_pg_username`* | The username for your {EDAcontroller} Postgres database.
+
+Default = `automationedacontroller`.
+| *`automationedacontroller_rq_workers*` | Number of Redis Queue (RQ) workers used by :EDAcontroller:. RQ workers are Python processes that run in the background.
+
+Default = (# of cores or threads) * 2 + 1
+| *`automationedacontroller_ssl_cert`* | _Optional_
+
+`/root/ssl_certs/eda.<example>.com.crt`
+
+Same as `automationhub_ssl_cert` but for :EDAcontroller: UI and API.
+| *`automationedacontroller_ssl_key`* | _Optional_
+
+`/root/ssl_certs/eda.<example>.com.key`
+
+Same as `automationhub_server_ssl_key` but for :EDAcontroller: UI and API.
 |====
