--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -6,6 +6,7 @@
 |====
 | *Variable* | *Description*
 | *`enable_insights_collection`* | The default install registers the node to the {InsightsName} Service if the node is registered with Subscription Manager. 
+
 Set to `False` to disable.
 
 Default = `true`
@@ -18,21 +19,15 @@ Default = empty list
 
 Password credential for access to `registry_url`.
 
-Used for both `[automationcontroller]` and `[automationhub]` groups.
-
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 
 When `registry_url` is `registry.redhat.io`, username and password are required if not using a bundle installer.
 
 For more information, see xref:proc-set-registry-username-password[Setting registry_username and registry_password].
-| *`registry_url`* | Used for both `[automationcontroller]` and `[automationhub]` groups.
-
-Default = `registry.redhat.io`.
+| *`registry_url`* | Default = `registry.redhat.io`.
 | *`registry_username`* | `registry_username` is only required if a non-bundle installer is used.
 
 User credential for access to `registry_url`.
-
-Used for both `[automationcontroller]` and `[automationhub]` groups, but only if the value of `registry_url` is `registry.redhat.io`.
 
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 
@@ -42,7 +37,24 @@ For more information, see xref:proc-set-registry-username-password[Setting regis
 If `routable_hostname` is not set, it should default to `ansible_host`. If you do not set `ansible_host`, `inventory_hostname` is used as a last resort.
 
 This variable is used as a host variable for particular hosts and not under the `[all:vars]` section. 
-For further information, see link:https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html#assigning-a-variable-to-one-machine-host-variables[Assigning a variable to one machine:host variables].
+For further information, see link:https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html#assigning-a-variable-to-one-machine-host-variables[Assigning a variable to one machine: host variables].
+
+|*`nginx_tls_protocols`* | Defines support for `ssl_protocols` in Nginx.
+
+Default = `TLSv1.2`.
+
+|*`nginx_tls_protocols`* | Defines support for `ssl_protocols` in Nginx.
+
+Values available `TLSv1`, `TLSv1.1`, `TLSv1.2, `TLSv1.3`.
+
+The TLSv1.1 and TLSv1.2 parameters only work when OpenSSL 1.0.1 or higher is used.
+
+The TLSv1.3 parameter only works when OpenSSL 1.1.1 or higher is used.
+
+If `nginx_tls-protocols = ['TLSv1.3']` only TLSv1.3 is enabled. To set more than one protocol use `nginx_tls_protocols = ['TLSv1.2', 'TLSv.1.3']`.
+
+Default = `TLSv1.2`.
+
 |====
 
 
