AAP-29296-A updated links

--- a/downstream/modules/platform/ref-OCP-system-requirements.adoc
+++ b/downstream/modules/platform/ref-OCP-system-requirements.adoc
@@ -2,6 +2,6 @@
 
 // [id="ref-OCP-system-requirements_{context}"]
 
-= System requirements for installing {PlatformName} on OpenShift Container Platform
+= System requirements for installing {PlatformName} on {OCPShort}
 
-When installing {PlatformNameShort} on OpenShift Container Platform, use the system requirements identified in the link:{URL____}/index#________[Tested system configurations] section of the _Operator enterprise topology_ guide.
+For system requirements for installing {PlatformNameShort} on {OCPShort}, see the {URLTopologies}/index#ocp-b-env-a[Tested system configurations] section of the _{TitleTopologies}_ guide.
