--- a/downstream/modules/platform/ref-RPM-system-requirements.adoc
+++ b/downstream/modules/platform/ref-RPM-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for RPM installation
 
-For system requirements for the RPM installation method of {PlatformNameShort}, see link:{URLInstallationGuide}/platform-system-requirements.
+For system requirements for the RPM installation method of {PlatformNameShort}, see the link:{URLInstallationGuide}/platform-system-requirements[System requirements] section of _{TitleInstallationGuide}_.
