--- a/downstream/modules/platform/ref-containerized-system-requirements.adoc
+++ b/downstream/modules/platform/ref-containerized-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for containerized installation of {PlatformNameShort}
 
-When installing the containerized version of {PlatformNameShort}, use the system requirements identified in the link:{URL____}/index#________[System requirements] section of the _Containerized installation_ guide.
+For system requirements for the containerized installation method of {PlatformNameShort}, see the link:{URLContainerizedInstall}/platform-system-requirements#system_requirements[System requirements] section of _{TitleContainerizedInstall}_.
