Update topology docs based on feedback
Add Redis VMs to RPM topologies

Create a document for supported topologies

https://issues.redhat.com/browse/AAP-28228

--- a/downstream/modules/topologies/ref-rpm-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-a.adoc
@@ -21,6 +21,7 @@ Each virtual machine (VM) has been tested with the following component requireme
 | 2 | {EDAName} | automationedacontroller
 | 1 | {AutomationMeshStart} hop node | execution_nodes
 | 2 | {AutomationMeshStart} execution node | execution_nodes
+| 1 | Redis | N/A
 | 1 | Externally managed database service | N/A
 | 1 | HAProxy load balancer in front of platform gateway (externally managed) | N/A
 |====
