--- a/downstream/modules/topologies/ref-rpm-b-env-b.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-b.adoc
@@ -21,6 +21,7 @@ Each VM has been tested with the following component requirements: 16 GB RAM, 4 
 | 2 | {EDAName} | 2.5 | automationedacontroller
 | 1 | {AutomationMeshStart} hop node | 2.4 | execution_nodes
 | 2 | {AutomationMeshStart} execution node | 2.4 | execution_nodes
+| 1 | Redis | N/A | N/A
 | 1 | Externally managed database service | N/A | N/A
 | 1 | HAProxy load balancer in front of platform gateway (externally managed) | N/A | N/A
 |====
