AAP-29296-A updated links

--- a/downstream/modules/platform/ref-OCP-system-requirements.adoc
+++ b/downstream/modules/platform/ref-OCP-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for installing {PlatformName} on {OCPShort}
 
-For system requirements for installing {PlatformNameShort} on {OCPShort}, see the {URLTopologies}/index#ocp-b-env-a[Tested system configurations] section of the _{TitleTopologies}_ guide.
+For system requirements for installing {PlatformNameShort} on {OCPShort}, see the link:{URLTopologies}[Tested system configurations] section of the _{TitleTopologies}_ guide.
